--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "rm -rf .next && next build",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alvin Oktavianus (agentsam1995@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "next": "^9.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "dotenv": "^8.0.0"
   }
 }
