--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Application for practicing nextjs",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "rm -rf .next && next build",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "next": "^9.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
