--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node server.js",
     "build": "rm -rf .next && next build",
     "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "export": "next export"
   },
   "author": "Alvin Oktavianus (agentsam1995@gmail.com)",
   "license": "ISC",
