--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^3.2.0",
     "dotenv": "^8.0.0"
   }
 }
