--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
-    "dotenv": "^8.0.0"
+    "babel-preset-airbnb": "^4.0.1",
+    "dotenv": "^8.0.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3"
   }
 }
