--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,10 @@
   "rules": {
     "react/jsx-filename-extension": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "func-names": 0
+    "func-names": 0,
+    "react/forbid-prop-types": 0,
+    "react/require-default-props": 0,
+    "react/prefer-stateless-function": 0
   },
   "settings": {
     "import/resolver": {
