--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "author": "Alvin Oktavianus (agentsam1995@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-bundle-analyzer": "^0.1.2",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "next": "^9.0.3",
+    "next-compose-plugins": "^2.2.0",
+    "next-routes": "^1.4.2",
+    "next-runtime-dotenv": "^1.2.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-airbnb": "^4.0.1",
     "dotenv": "^8.0.0",
