--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,9 @@
           "./"
         ],
         "alias": {
-          "components": "./components"
+          "components": "./components",
+          "store": "./redux/store.js",
+          "pages": "./pages"
         }
       }
     ]
