--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "express": "^4.17.1",
     "next": "^9.0.3",
     "next-compose-plugins": "^2.2.0",
+    "next-redux-saga": "^4.0.2",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
     "next-routes": "^1.4.2",
     "next-runtime-dotenv": "^1.2.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
