--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.2.6",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.5"
   },
