--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "next": "^9.0.3",
     "next-compose-plugins": "^2.2.0",
     "next-progressbar": "^1.0.0",
