--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Application for practicing nextjs",
   "main": "app/server.js",
   "scripts": {
-    "dev": "rm -rf .next && nodemon --watch app --watch app/server.js",
+    "dev": "rm -rf .next && nodemon --watch app --watch app/server.js | pino-pretty",
     "build": "rm -rf .next && cross-env NODE_ENV=production next build",
-    "start": "cross-env NODE_ENV=production node ./app/server.js",
+    "start": "npm run build && cross-env NODE_ENV=production node ./app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alvin Oktavianus (agentsam1995@gmail.com)",
@@ -16,6 +16,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.0.3",
@@ -27,6 +28,7 @@
     "next-runtime-dotenv": "^1.2.0",
     "next-server": "^9.0.3",
     "node-sass": "^4.12.0",
+    "pino": "^5.13.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -49,6 +51,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pino-pretty": "^3.2.1"
   }
 }
